sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: type mismatch;
 found   : Boolean(true)
 required: Int
	while (echan=true) {
                     ^AlgBubbleSort1:5: error: type mismatch;
 found   : Unit
 required: Boolean
	while (echan=true) {
                    ^